[gd_scene load_steps=6 format=3 uid="uid://cruh8bbcfvyvr"]

[ext_resource type="Texture2D" uid="uid://brp4euwugc18f" path="res://assets/background.png" id="1_blg2x"]
[ext_resource type="PackedScene" uid="uid://bt33j5dwxano3" path="res://scenes/top_ui.tscn" id="2_wrbvl"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="4_4jr62"]
[ext_resource type="Texture2D" uid="uid://cue06s8wd5p1p" path="res://assets/Win sign.jpeg" id="5_witid"]
[ext_resource type="Texture2D" uid="uid://cmqrsngr4o2g" path="res://assets/gameover.jpeg" id="6_kkoc8"]

[node name="Game" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("1_blg2x")

[node name="top_ui" parent="." instance=ExtResource("2_wrbvl")]

[node name="grid" type="Node2D" parent="."]
script = ExtResource("4_4jr62")
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2

[node name="clock" type="Timer" parent="grid"]

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="background2" type="TextureRect" parent="."]
visible = false
modulate = Color(0.0823529, 0.0823529, 0.0823529, 0.756863)
z_index = 1
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("1_blg2x")

[node name="winner" type="TextureRect" parent="."]
visible = false
z_index = 3
offset_left = -24.0
offset_right = 588.0
offset_bottom = 1024.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_witid")

[node name="gameover" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_kkoc8")

[connection signal="update_move_counter" from="grid" to="top_ui" method="_on_grid_update_move_counter"]
[connection signal="update_score" from="grid" to="top_ui" method="_on_grid_update_score"]
[connection signal="update_timer" from="grid" to="top_ui" method="_on_grid_update_timer"]
[connection signal="timeout" from="grid/clock" to="grid" method="_on_clock_timeout"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
